Changed ALOT of stuff since last commit!